# wilhelmagren

./: .bash_aliases  .bashrc  .gitmodules  .tmux.conf  .vimrc  README  README.md  cpdotfiles.py  cpdotfiles.sh  index.html  install.sh  literature.txt  powershell_profile.ps1  pyproject.toml  settings.json  setup-arch.sh  setup_windows.ps1  windows-terminal-settings.json
.config/: starship.toml
.config/alacritty/: alacritty.toml  alacritty.yml
.config/fish/: config.fish
.config/fish/conf.d/: rustup.env.fish  uv.env.fish
.config/fish/functions/: ff.fish  py.fish  rf.fish  rl.fish  ur.fish
.config/nvim/: init.lua  init.vim  lazy-lock.json
.config/nvim/after/ftplugin/: lua.lua  python.lua  rust.lua
.config/nvim/lua/: autocmds.lua  colorscheme.lua  completions.lua  formatter.lua  fzf.lua  keymaps.lua  lsp.lua  mini.lua  options.lua  pacman.lua  plugins.lua  treesitter.lua
.config/nvim/lua/colorschemes/: kanagawa.lua  tokyonight.lua  vague.lua
.config/nvim/lua/plugins/: blink.lua  conform.lua  lspconfig.lua  oil.lua  telescope.lua  treesitter.lua
.config/nvim/plugin/: packer_compiled.lua
.config/tmux/: tmux.conf
alacritty/.config/alacritty/: alacritty.toml
fish/.config/fish/: config.fish
fish/.config/fish/functions/: gb.fish  gd.fish  gp.fish  gs.fish  ll.fish  pf.fish  pl.fish  vi.fish
games/: completionist.txt
latest/fish/: config.fish
latest/fish/functions/: cab.fish  cai.fish  car.fish  cdc.fish  cdw.fish  gc.fish  gcl.fish  gpu.fish  l.fish  ll.fish  pf.fish  pl.fish
latest/nvim/: init.lua
latest/nvim/after/ftplugin/: fish.lua  json.lua  lua.lua
latest/nvim/lua/config/: autocmds.lua  colorscheme.lua  completions.lua  keymaps.lua  lsp.lua  oil.lua  options.lua  telescope.lua  treesitter.lua
nvim/: init.lua
nvim/.config/nvim/: init.lua
nvim/.config/nvim/after/ftplugin/: json.lua  rust.lua
nvim/.config/nvim/lua/config/: autocmds.lua  colorscheme.lua  completions.lua  diagnostics.lua  keymaps.lua  lsp.lua  oil.lua  options.lua  treesitter.lua
nvim/lua/: colorscheme.lua  completions.lua  lsp.lua  pacman.lua  statusline.lua  treesitter.lua
nvim/lua/config/: cmp.lua
nvim/plugin/: packer_compiled.lua
scripts/: cpdotfiles.py  setup-manjaro.sh  setup-nvim.sh  setup-tmux.sh  setup_windows.ps1
